--- a/react/blog/src/App.css
+++ b/react/blog/src/App.css
@@ -16,6 +16,13 @@ div {
   border-bottom: 1px solid gray;
 }
 
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+  text-align: left;
+}
+
 @media (prefers-reduced-motion: no-preference) {
 }
 
