--- a/react/shop/src/App.css
+++ b/react/shop/src/App.css
@@ -1,3 +1,10 @@
+.mainBg {
+  height: 300px;
+  background-image: url("./img/bg.png");
+  background-size: cover;
+  background-position: center;
+}
+
 .App {
   text-align: center;
 }
