--- a/MongoDB/ToDoApp/views/list.ejs
+++ b/MongoDB/ToDoApp/views/list.ejs
@@ -42,8 +42,11 @@
       </div>
     </nav>
 
-    <h4>할일 제목:</h4>
-    <p>목표 날짜:</p>
+    <% for (i = 0; i < posts.length; i++) { %>
+    <h4>할일 제목: <%= posts[i].title %></h4>
+    <p>목표 날짜: <%= posts[i].date %></p>
+    <% } %>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
