--- a/MongoDB/ToDoApp/views/list.ejs
+++ b/MongoDB/ToDoApp/views/list.ejs
@@ -42,15 +42,38 @@
       </div>
     </nav>
 
-    <% for (i = 0; i < posts.length; i++) { %>
-    <h4>할일 제목: <%= posts[i].title %></h4>
-    <p>목표 날짜: <%= posts[i].date %></p>
-    <% } %>
+    <ul class="list-group">
+      <% for (i = 0; i < posts.length; i++) { %>
+      <li class="list-group-item">
+        <p>글 번호 <%= posts[i]._id %></p>
+        <h4>할일 제목: <%= posts[i].title %></h4>
+        <p>목표 날짜: <%= posts[i].date %></p>
+        <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
+      </li>
+      <% } %>
+    </ul>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script>
+      $(".delete").click((e) => {
+        let postId = e.target.dataset.id;
+        let clickPost = $(this);
+        $.ajax({
+          method: "DELETE",
+          url: "/delete",
+          data: { _id: postId },
+        })
+          .done((result) => {
+            console.log("성공!");
+            clickPost.parent("li").fadeOut();
+          })
+          .fail(() => {});
+      });
+    </script>
   </body>
 </html>
