--- a/MongoDB/ToDoApp/views/list.ejs
+++ b/MongoDB/ToDoApp/views/list.ejs
@@ -74,7 +74,7 @@
             clickPost.parent("li").fadeOut();
           })
           .fail((xhr, textStatus, errorThrown) => {
-            console.log("xhr :" xhr, "textStatus :" textStatus, "errorThrown :" errorThrown);
+            console.log(xhr, textStatus, errorThrown);
           });
       });
     </script>
