--- a/next/forum/app/globals.css
+++ b/next/forum/app/globals.css
@@ -3,6 +3,13 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+}
+
 .list-bg {
   background: rgb(249, 250, 255);
   padding: 10px;
@@ -22,4 +29,20 @@ body {
 .list-item p {
   color: grey;
   margin: 5px 0px;
+}
+
+.p-20 {
+  padding: 20px;
+}
+input {
+  box-sizing: border-box;
+  padding: 10px;
+  display: block;
+  margin-bottom: 10px;
+}
+button {
+  padding: 10px 15px;
+  background: lightgray;
+  border: none;
+  border-radius: 5px;
 }
