--- a/next/nestagram/app/globals.css
+++ b/next/nestagram/app/globals.css
@@ -13,6 +13,11 @@ li {
   list-style: none;
 }
 
+.logo {
+  width: 200px;
+  height: 200px;
+}
+
 .nav_list {
   display: flex;
   flex-direction: column;
@@ -22,16 +27,17 @@ li {
 
 .nav_list > li {
   display: flex;
-  border: 1px solid;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 70px;
   align-items: center;
   justify-content: center;
-  font-size: 18px;
+  font-size: 20px;
+  border-radius: 18px;
 }
 
 .nav_list > li > img {
-  width: 18px;
+  width: 25px;
+  margin-right: 10px;
 }
 
 .logout {
@@ -41,6 +47,11 @@ li {
 
 .nav_list > li:hover {
   cursor: pointer;
+  background-color: #d0bfff;
+  transition-duration: 0.7s;
+}
+.nav_list > li:hover > img {
+  width: 27px;
 }
 
 .nav_container {
