게시글 위치 확인

--- a/next/nestagram/app/globals.css
+++ b/next/nestagram/app/globals.css
@@ -18,6 +18,16 @@ li {
   height: 200px;
 }
 
+/* nav CSS */
+.nav_container {
+  margin: 0;
+  width: 250px;
+  height: 100vh;
+  position: fixed;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
 .nav_list {
   display: flex;
   flex-direction: column;
@@ -30,7 +40,7 @@ li {
   width: 150px;
   height: 70px;
   align-items: center;
-  justify-content: center;
+  padding-left: 20px;
   font-size: 20px;
   border-radius: 18px;
 }
@@ -52,12 +62,6 @@ li {
 }
 .nav_list > li:hover > img {
   width: 27px;
-}
-
-.nav_container {
-  margin: 0;
-  width: 250px;
-  height: 100vh;
 }
 
 .user_info {
@@ -89,4 +93,12 @@ li {
 .login_btn:hover {
   cursor: pointer;
   background-color: #beadfa;
+}
+
+/* post CSS */
+
+.post_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
