--- a/next/nestagram/app/globals.css
+++ b/next/nestagram/app/globals.css
@@ -73,6 +73,34 @@ li {
   padding-left: 10px;
 }
 
+.post_make {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(67, 71, 85, 0.27);
+  opacity: 1;
+  transition-duration: 0.5s;
+}
+
+.post_make_hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.post_make_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 500px;
+  background-color: white;
+  border-radius: 10px;
+}
+
 .user_info:focus {
   outline-color: #beadfa;
 }
@@ -101,4 +129,44 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.post_img > img {
+  width: 400px;
+  height: 500px;
+  border-radius: 5px;
+}
+
+.post_card {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+    rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+
+.post_header {
+  display: flex;
+  gap: 10px;
+  padding-left: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.post_froile {
+  width: 32px;
+  height: 32px;
+  border-radius: 30px;
+}
+
+.post_like,
+.post_content,
+.post_comment {
+  padding-left: 15px;
+  margin-top: 10px;
+}
+
+.post_comment {
+  margin-bottom: 15px;
 }
