fetch 함수를 사용하여 삭제 기능 생성

--- a/next/forum/app/globals.css
+++ b/next/forum/app/globals.css
@@ -46,3 +46,21 @@ button {
   border: none;
   border-radius: 5px;
 }
+
+.navbar {
+  background: white;
+  padding: 20px;
+}
+.navbar a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: black;
+}
+.logo {
+  font-weight: bold;
+}
+
+.list-item {
+  opacity: 1;
+  transition-duration: 1s;
+}
